// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="sc-bdVaJa iOJtQG"
>
  <h1>
    Foo
  </h1>
</div>
`;

exports[`renders images 1`] = `
<div
  className="sc-bdVaJa iOJtQG"
>
  <p>
    <img
      alt="foo"
      onClick={[Function]}
      src="http://bar/baz.png"
    />
  </p>
</div>
`;
